--- a/src/main/resources/css/neo.css
+++ b/src/main/resources/css/neo.css
@@ -21,6 +21,7 @@ body #toolbar_item command_help {
 .syntaxhighlighter table caption,
 .syntaxhighlighter textarea {
   font-size: 14px !important;
+  font-family: Consolas, Monaco,"Bitstream Vera Sans Mono", monospace !important;
 }
 
 html
@@ -49,7 +50,8 @@ div.warning th, div.note th, div.caution th,
 p.legalnotice-title,
 div.refnamediv p,
 div.sidebar p.title,
-th
+th,
+div.table-contents td p span.strong strong
 {
   color: #15708E;
   font-family: Candara, Myriad Pro, Myriad, "Lucida Sans","Trebuchet MS",sans-serif;
@@ -177,15 +179,25 @@ p, ul, ol
   margin-bottom: 1em;
 }
 
+li p
+{
+  margin-bottom: 0.5em;
+}
+
 div.toc p, div.list-of-figures p, div.list-of-tables p
 {
   margin-top: 1.5em;
 }
 
-div.toc p b, div.list-of-figures p b, div.list-of-tables p b, div.sidebar p b
+div.list-of-figures p b, div.list-of-tables p b, div.sidebar p b
 {
   font-style: normal;
   font-weight: bold;
+}
+
+div.toc
+{
+  margin-bottom: 1em;
 }
 
 p.copyright
@@ -291,7 +303,8 @@ div.table table, div.informaltable table
   background: #d7e3e6 url("table-bg.png");
 }
 
-div.table table th, div.informaltable table th
+div.table table th, div.informaltable table th,
+div.table-contents td p span.strong strong
 {
   color: #333333;
 }
