--- a/src/main/resources/css/neo.css
+++ b/src/main/resources/css/neo.css
@@ -52,7 +52,8 @@ p.legalnotice-title,
 div.refnamediv p,
 div.sidebar p.title,
 th,
-div.table-contents td p span.strong strong
+div.table-contents td p span.strong strong,
+tr.question td b p
 {
   color: #15708E;
   font-family: Candara, Myriad Pro, Myriad, "Lucida Sans","Trebuchet MS",sans-serif;
@@ -66,6 +67,27 @@ body h4.title
 td p strong
 {
   font-size: 1.067em;
+}
+
+tr.question td b p
+{
+  font-size: 1em;
+  margin: 0.5em 0 0 0;
+}
+
+tr.question td
+{
+  padding: 0;
+}
+
+tr.answer td, tr.answer td p
+{
+  padding-top: 0;
+}
+
+tr.answer td
+{
+  padding-left: 1em;
 }
 
 div.navheader
