--- a/src/main/resources/css/neo.css
+++ b/src/main/resources/css/neo.css
@@ -53,7 +53,8 @@ div.refnamediv p,
 div.sidebar p.title,
 th,
 div.table-contents td p span.strong strong,
-tr.question td b p
+tr.question td b p,
+div.abstract p.title b
 {
   color: #15708E;
   font-family: Candara, Myriad Pro, Myriad, "Lucida Sans","Trebuchet MS",sans-serif;
@@ -413,5 +414,41 @@ div.slide p, div.slide li
 
 .partintro, .refsynopsisdiv {
   padding-top: 1.5em;
+}
+
+/* Quickstart list on titlepage. */
+
+div.abstract p
+{
+  line-height: 0;
+  margin-bottom: 0;
+}
+
+div.abstract p.title
+{
+  line-height: inherit;
+  margin-bottom: 0.25em;
+}
+
+div.abstract ul.itemizedlist
+{
+  list-style-type: none;
+  margin-bottom: 0;
+}
+
+div.abstract ul.itemizedlist li.listitem,
+div.abstract ul.itemizedlist li.listitem p
+{
+  margin: 0;
+}
+
+div.abstract ul.itemizedlist li.listitem p
+{
+  line-height: inherit;
+}
+
+div.titlepage hr
+{
+  margin: 0;
 }
 
