Tweaks for the terminology list.

--- a/src/main/resources/common/css/style.css
+++ b/src/main/resources/common/css/style.css
@@ -405,7 +405,7 @@ div.query-outer-wrapper {
   left: 0;
 }
 
-#content h3,#content h4,#content h5,#content h6, #content div.table[id] > p.title {
+#content h3,#content h4,#content h5,#content h6, #content div.table[id] > p.title, dt > span.glossterm {
   cursor: pointer;
 }
 
