--- a/src/main/resources/common/css/style.css
+++ b/src/main/resources/common/css/style.css
@@ -526,3 +526,15 @@ img {
 #disqus-body {
   display: none;
 }
+
+div.abstract {
+    border: 4px solid rgb(217, 237, 247);
+    border-radius: 4px;
+    padding: 6px 4px 0 4px;
+    margin-bottom: 0.5em;
+}
+
+div.abstract p {
+  font-size: 17px;
+}
+
