--- a/src/main/resources/common/css/style.css
+++ b/src/main/resources/common/css/style.css
@@ -217,12 +217,13 @@ code {
   background: #f2f2f2;
 }
 
-.table tfoot>tr>th,.table-condensed tfoot>tr>th {
+tfoot>tr>th {
   padding: 0 0 0 8px;
   text-align: left;
   border-bottom: 0 none;
   font-size: 12px;
   font-weight: normal;
+  white-space: pre-wrap;
 }
 
 td>p {
@@ -242,7 +243,7 @@ div.queryresult code {
   display: block;
 }
 
-div.queryresult td.emptyresult code {
+td.emptyresult code {
   color: #999999;
 }
 
